--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -3,14 +3,68 @@
 	padding: 0;
 }
 
-.header-img-logo img {
-	vertical-align: middle;
-	max-width: 100%;
-	border-style: none;
-	width: 3%;
+body {
+	font-size: 14px;
+	font-family: 'PlumbCondensed', sans-serif;
 }
-.header-img-logo {
+
+header {
+	background: url('/templates/img/logo-white.png') no-repeat;
+	background-size: contain;
+	background-position: center;
+	display: block;
+	position: fixed;
+	top: 20px;
+	left: 0;
 	width: 100%;
+	height: 40px;
+	z-index: 10;
+}
+
+.black {
+	height: 120px;
+	background-color: rgb(12, 12, 12);
+}
+
+/* section: main-photo */
+
+.main {
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	height: auto;
+	position: relative;
+	background-color: rgb(12, 12, 12);
+}
+.main-img {
+	width: calc(107% - 80px);
+}
+.bg-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.35);
+}
+
+.fixed-container-for-text {
+	width: 100%;
+	height: 100%;
+	min-width: 100vh;
+	display: flex;
+	position: relative;
+}
+.container {
+	max-width: 1350px;
+	width: calc(100% - 80px);
+	margin-left: auto;
+	margin-right: auto;
+	height: auto;
+	z-index: 7;
+}
+
+.center-text {
+	z-index: 9;
+	position: absolute;
 	display: flex;
 	justify-content: center;
 }
