--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -38,12 +38,13 @@ header {
 }
 .main-img {
 	width: calc(107% - 80px);
+	position: static;
 }
 .bg-overlay {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.35);
+	background-color: rgba(0, 0, 0, 0.15);
 }
 
 .fixed-container-for-text {
@@ -51,7 +52,7 @@ header {
 	height: 100%;
 	min-width: 100vh;
 	display: flex;
-	position: relative;
+	justify-content: center;
 }
 .container {
 	max-width: 1350px;
@@ -60,11 +61,29 @@ header {
 	margin-right: auto;
 	height: auto;
 	z-index: 7;
+	display: flex;
+	justify-content: center;
 }
-
 .center-text {
 	z-index: 9;
 	position: absolute;
-	display: flex;
-	justify-content: center;
+	padding-top: 40px;
+	text-align: center;
+}
+
+.center-text h2 {
+	color: #fd0084;
+	font-weight: 600;
+	font-size: 40px;
+	text-transform: uppercase;
+	margin-bottom: 15px;
+}
+
+.center-text a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color: rgb(12, 12, 12);
+	padding-right: 24px;
+	font-size: 16px;
+	font-weight: 600;
 }
